crates/murphy-plugin-macros/tests/ui/fail_node_pattern_unsupported_kind.stderr
error: def_node_matcher!: node kind `rescue` is not supported by def_node_matcher! in v1 — see follow-up issue
 --> tests/ui/fail_node_pattern_unsupported_kind.rs:4:1
  |
4 | murphy_plugin_macros::def_node_matcher!(m, "(rescue _ _ _)");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::def_node_matcher` (in Nightly builds, run with -Z macro-backtrace for more info)
